--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "client": "file:..",
     "cors": "^2.8.5",
     "country-iso-2-to-3": "^1.1.0",
     "dotenv": "^16.0.3",
